--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SecondActivity"
+    tools:context=".ThirdActivity"
     android:layout_margin="5dp">
 
     <TextView
@@ -18,7 +18,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/CourseTitleSeconed"
+        android:id="@+id/CourseTitleThird"
         android:layout_margin="5dp"
         />
     <TextView
@@ -29,7 +29,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/CourseCategorySeconed"
+        android:id="@+id/CourseCategoryThird"
         android:layout_margin="5dp"
         />
     <TextView
@@ -40,15 +40,15 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/NoOfLecturesSeconed"
+        android:id="@+id/NoOfLecturesThird"
         android:layout_margin="5dp"
         />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btnAdd"
-        android:text="Add"
-        android:onClick="btnAddOnClick"/>
+        android:text="Update Course"
+        android:onClick="ThirdbtnAddOnClick"/>
 
 
 </LinearLayout>
